fixing the overwrap problem by changing the flexwrap to nowrap ... that may be a mistake

--- a/v4.4.1/scss/_nav.scss
+++ b/v4.4.1/scss/_nav.scss
@@ -5,7 +5,7 @@
 
 .nav {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
